--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,19 +1,13 @@
 <resources>
-    <string name="app_name">TODO App</string>
-    <string name="welcome_back">Welcome Back</string>
-    <string name="today_s_task">Today\'s Task</string>
-    <string name="taskadding">taskAdding</string>
-    <string name="add_task">Add Task</string>
-    <string name="title">Title</string>
-    <string name="description">Description</string>
-    <string name="date">Date</string>
-    <string name="editbutton">editButton</string>
-    <string name="deletebutton">deleteButton</string>
-    <string name="new_task">New Task</string>
-    <string name="closebutton">CloseButton</string>
-    <string name="enter_the_task_title">Enter the Task Title</string>
-    <string name="enter_task_description">Enter Task Description</string>
-    <string name="enter_date">Enter Date</string>
-    <string name="save_task">Save Task</string>
-    <string name="update_task">Update Task</string>
+    <string name="app_name">ToDo App</string>
+    <string name="delete_confirmation">Confirmation</string>
+    <string name="sureToDelete">Are you sure you want to delete the task</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
+    <string name="confirmation">Completed the task!..</string>
+    <string name="sureToMarkAsComplete">Are you sure you want to mark this task as completed.</string>
+    <string name="congrats_you_have_completed_the_task_successfully">Congrats!… You have completed the task successfully..</string>
+    <string name="close">Close</string>
+    <string name="hello">Hello</string>
+    <string name="all_tasks">All tasks</string>
 </resources>
